(library
 (name            zil)
 (public_name     zil)
 (modules         zil)
 (libraries
   hex
   faraday
   yojson
   secp256k1
   bech32
   pb
   digestif.c
   ocplib-json-typed
   zarith))

(library
 (name            zil_async)
 (public_name     zil-async)
 (modules         zil_async)
 (libraries
   fastrest
   zil
   core
   async))
